sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:4: error: not found: value i
              i=getNombreValeurs-2 
              ^AlgBubbleSort2:12: error: not found: value i
              while (change==true && i!=0)
                                     ^