sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {var change:Boolean=true
            do{ change=false
              i=getNombreValeurs-2 
              {
                for (j<-0 to i)
                {if (!plusPetit (j,j+1)  )
               {echange(j,j+1)
                change=true}
                i=i-1}}}
               
              while (change==true && i!=0)
              }



